# CAEdison

./: .gitignore  README.md  package-lock.json  package.json
CADs/STEP/: BKT_2T.STEP  Beam.STEP  Conrod.stp  Contact_Arm.stp  Flange Mount.stp  Machine_Frame.stp  Mesh_Arm.stp  PLT_I_06_Fillet.STEP  Pump_housing.stp
build-wasm/: AppManager.cpp  AppManager.hpp  CMakeLists.txt  Geometry.cpp  Geometry.hpp  GeometryManager.cpp  GeometryManager.hpp  LCRSNode.hpp  LCRSTree.hpp  WasmOcctView.cpp  WasmOcctView.hpp  main.cpp
src/: init.js  server.js
src/controllers/: rootController.js
src/routers/: rootRouter.js
src/views/: home.html  occt-webgl-sample.html  occt-webgl-sample.js  screen.js
